# Shreddit

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.py
shreddit/: app.py  shredder.py  util.py
tests/: test_shreddit.py
