[tool.poetry]
name = "shreddit"
version = "1.0.0"
description = ""
authors = ["Niko Korhonen <niko@bitnik.fi>"]

[tool.poetry.dependencies]
python = ">=3.7"
appdirs = "^1.4.3"
arrow = "^0.15.5"
praw = "^6.5.1"
prawcore = "^1.0.1"
PyYAML = "^5.3"
loremipsum = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
